# Plum-Assignment-12-04-2026

./: Assumptions.md  README.md  plan.md
.claude/: settings.local.json
claims-pipeline/: .gitignore  ARCHITECTURE.md  ASSUMPTIONS.md  CONTRACTS.md  README.md  config.yaml  eval_report.md  plan.md  pyproject.toml
claims-pipeline/app/: api.py  config.py  errors.py  evaluation.py  llm.py  main.py  models.py  policy_store.py  prompts.py  service.py  sources.py  storage.py
claims-pipeline/app/agents/: __init__.py  classifier.py  consistency.py  fraud_assessor.py  prep.py  reader.py
claims-pipeline/app/pipeline/: __init__.py  consistency_checks.py  document_check.py  extraction.py  fraud_check.py  intake.py  policy_decision.py  rules_engine.py  runner.py
claims-pipeline/scripts/: make_mock_docs.py  run_eval.py
claims-pipeline/tests/: conftest.py  test_api.py  test_consistency.py  test_decision_stage.py  test_document_check.py  test_evaluation.py  test_extraction.py  test_fraud.py  test_intake.py  test_policy_store.py  test_rules_engine.py  test_runner.py
claims-pipeline/ui/: app.js  index.html  style.css
